# foundry-agent-service-mcp-demo

./: .env_template  .gitignore  LICENSE  README.md  spec.txt
.github/instructions/: kubernetes-deployment-best-practices.instructions.md  python.instructions.md
.github/prompts/: breakdown-epic-arch.prompt.md  breakdown-epic-pm.prompt.md  review-and-refactor.prompt.md
mcp-wiki/: .dockerignore  pyproject.toml
mcp-wiki/agent-service/: agent_mcp_wiki.py
mcp-wiki/k8s/: clusterissuer-prod.yaml  clusterissuer-staging.yaml  deployment.yaml  ingress.yaml  kustomization_example.yaml  namespace.yaml  service.yaml
mcp-wiki/k8s/https/: certificate.yaml  deployment.yaml  ingress.yaml  ingress_OLD.yaml  service.yaml
mcp-wiki/server/: Dockerfile  misc.txt  server.py
